# rs-safe-shutdown

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
