[package]
name = "philiprehberger-safe-shutdown"
version = "0.1.2"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Graceful shutdown coordination with timeout support for Rust"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-safe-shutdown"
keywords = ["shutdown", "graceful", "signal", "coordination", "server"]
categories = ["concurrency", "asynchronous"]
